# Tools/webTemplate.SwaggerApp/data/swagger.json
@@ -38,17 +38,7 @@
           "200": {
             "description": "Success",
             "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenDto"
-                }
-              },
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TokenDto"
-                }
-              },
-              "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/TokenDto"
                 }
@@ -58,19 +48,28 @@
           "400": {
             "description": "Bad Request",
             "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/BadRequestMessage"
-                }
-              },
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/BadRequestMessage"
                 }
-              },
-              "text/json": {
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/metric": {
+      "get": {
+        "tags": [
+          "Metric"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BadRequestMessage"
+                  "$ref": "#/components/schemas/MetricEnum"
                 }
               }
             }
@@ -87,14 +86,6 @@
           "200": {
             "description": "Success",
             "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/RoleDto"
-                  }
-                }
-              },
               "application/json": {
                 "schema": {
                   "type": "array",
@@ -102,13 +93,35 @@
                     "$ref": "#/components/schemas/RoleDto"
                   }
                 }
-              },
-              "text/json": {
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/role/{id}": {
+      "get": {
+        "tags": [
+          "Role"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/RoleDto"
-                  }
+                  "$ref": "#/components/schemas/RoleDto"
                 }
               }
             }
@@ -125,15 +138,6 @@
           "200": {
             "description": "Success",
             "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "integer",
-                    "format": "int32"
-                  }
-                }
-              },
               "application/json": {
                 "schema": {
                   "type": "array",
@@ -142,13 +146,58 @@
                     "format": "int32"
                   }
                 }
-              },
-              "text/json": {
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "parameters": [
+          {
+            "name": "guid",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json-patch+json": {
+              "schema": {
+                "$ref": "#/components/schemas/HardClassDto"
+              }
+            },
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/HardClassDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/HardClassDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/HardClassDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "integer",
-                    "format": "int32"
+                    "$ref": "#/components/schemas/SubClassDto"
                   }
                 }
               }
@@ -200,6 +249,23 @@
         },
         "additionalProperties": false
       },
+      "MetricEnum": {
+        "enum": [
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9,
+          10,
+          11
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
       "RoleDto": {
         "type": "object",
         "properties": {
@@ -213,6 +279,80 @@
           },
           "name": {
             "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "SimpleEnum": {
+        "enum": [
+          1,
+          2,
+          -1
+        ],
+        "type": "integer",
+        "format": "int32"
+      },
+      "SubClassDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "simple": {
+            "$ref": "#/components/schemas/SimpleEnum"
+          },
+          "left": {
+            "$ref": "#/components/schemas/SubClassDto"
+          },
+          "right": {
+            "$ref": "#/components/schemas/SubClassDto"
+          }
+        },
+        "additionalProperties": false
+      },
+      "HardClassDto": {
+        "type": "object",
+        "properties": {
+          "metric": {
+            "$ref": "#/components/schemas/MetricEnum"
+          },
+          "simple": {
+            "$ref": "#/components/schemas/SimpleEnum"
+          },
+          "subCl": {
+            "$ref": "#/components/schemas/SubClassDto"
+          },
+          "subNaCl": {
+            "$ref": "#/components/schemas/SubClassDto"
+          },
+          "dict": {
+            "type": "object",
+            "additionalProperties": {
+              "type": "string"
+            },
+            "nullable": true
+          },
+          "intDict": {
+            "type": "object",
+            "additionalProperties": {
+              "type": "string"
+            },
+            "nullable": true
+          },
+          "dictClass": {
+            "type": "object",
+            "additionalProperties": {
+              "$ref": "#/components/schemas/HardClassDto"
+            },
+            "nullable": true
+          },
+          "list": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/SubClassDto"
+            },
             "nullable": true
           }
         },
